--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -4,15 +4,18 @@
 "description": "Extensão Chrome informando em tempo real a taxa de frequência cardiaca conectada via Bluetooth. Por Gustavo Kenendy Renkel",
 "version": "1.0",
 "icons": {
-"128": "favicon.png"
+    "128": "favicon.png"
 },
 "app": {
-"urls": [
-"https://gustavokennedy.github.io/chrome-extension-heart-rate-monitor/"
-],
+    "urls": [
+        "https://gustavokennedy.github.io/chrome-extension-heart-rate-monitor/"
+    ],
 "launch": {
-"web_url": "https://gustavokennedy.github.io/chrome-extension-heart-rate-monitor/"
-}
+    "web_url": "https://gustavokennedy.github.io/chrome-extension-heart-rate-monitor/"
+    }
 },
-"permissions": ["storage", "activeTab", "scripting"]
+"permissions": ["storage", "activeTab", "scripting"],
+"actions": {
+    "default_title": "Configurar"
+}
 }
