Criado manifest e popup da extensão

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,21 +1,17 @@
 {
-"manifest_version": 2,
+"manifest_version": 3,
 "name": "HRM Extension - Heart Rate Monitor",
 "description": "Extensão Chrome informando em tempo real a taxa de frequência cardiaca conectada via Bluetooth. Por Gustavo Kenendy Renkel",
 "version": "1.0",
 "icons": {
     "128": "favicon.png"
 },
-"app": {
-    "urls": [
-        "https://gustavokennedy.github.io/chrome-extension-heart-rate-monitor/"
-    ],
-"launch": {
-    "web_url": "https://gustavokennedy.github.io/chrome-extension-heart-rate-monitor/"
-    }
+"background": {
+    "service_worker": "background.js"
 },
 "permissions": ["storage", "activeTab", "scripting"],
-"actions": {
-    "default_title": "Configurar"
-}
+"action": {
+    "default_title": "HMR - Configurações",
+    "default_popup": "popup.html"
+  }
 }
