--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -7,15 +7,9 @@
 "icons": {
     "128": "favicon.png"
 },
-"app": {
-    "background": {
-      "scripts": ["background.js"]
-    }
-  },
-  "bluetooth": {
-    "low_energy": true,
-    "uuids": ["180d"]
-  },
+"background": {
+  "service_worker": "background.js"
+},
 "permissions": [
     "tabs",
     "storage",
