Alterado service_worker

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -8,7 +8,7 @@
     "128": "favicon.png"
 },
 "background": {
-  "service_worker": "background.js"
+    "service_worker": "background-worker.js"
 },
 "permissions": [
     "tabs",
